Revision history for C and Perl extension of nfdump.

1.17 2015-10-xx
	-perl: added test t/09-instances.t
	-c: removed bug when thread key was nor released after lnf_mem release
	-c: LNF_CALC_*PS items returns LNF_ERR_NAN when division by 0 is detected 
	-c: new flag LNF_APPEND in lnf_open for open file in append mode (not supported by nfdump format)
	-c: LNF_FLD_INFO_SIZE can be returned by lnf_fld_info
	-c: added LNF_<type>_T with basic types definitions used by libnf 
	-c: removed bug when memheap crashes after mixing pair and non pair 
	    fields (Thanks to Jan Wrona)
	-c: new fields LNF_FLD_INGRESS_ACL and LNF_FLD_EGRESS_ACL representing 
	    all fields *_ACL_ID, *_ACE_ID, *_XACE_ID in one structure lnf_acl_t

1.16 2015-09-07
	-c: added license and copyright information 
	-c: added field event (thanks to Artem Buglak)
	-perl: module allows to sort records without aggregation (list mode)
	-c: bug when sorting same values (Thanks to Jan Wrona) 
	-c: libnf-info is compiled statically now (Thanks to Lukas Hutak)

1.15 2015-07-26
	- c: new function lnf_mem_setopt for configuring some lnf_mem options 
	- c: lnf_mem_t can be switched into list mode via 
	     lnf_mem_setopt(LNF_OPT_LISTMODE, ...); In this mode there is no 
		 aggregation of items; mode can be used for sorting records 
	- c: improved merge_threads (removed deadlock)
	- c: new function lnf_mem_lookup_c and lnf_mem_lookup_raw_c
	- c: new example examples/lnf_ex09_memlookup.c 
	- c: new example examples/lnf_ex10_listmode.c
	- c: new option -l in examples/lnf_ex04_threads.c
	- nfdumpp: sorting without aggregation 
	- c: removed binnary and .o objects from original nfdump 
	     sources in distribution package (Bug #105944)

1.14 2015-07-18
	- c: new way to work with data in lnf_mem, new functions 
	  lnf_mem_first_c, lnf_mem_next_c, lnf_mem_read_c,
	  lnf_mem_read_raw_c
	- c: functions lnf_mem_read, lnf_mem_read_raw,
	  lnf_mem_read_reset marked as deprecated